[package]
name = "d2sw_tiled_project"
version = "0.2.6"
edition = "2021"

[profile.release]
strip = true

[dependencies]
array-macro = "2.1"
const_format = "0.2"
byteorder = "1.4"
png = "0.17"
toml = "0.5"
# toml_edit = { version = "0.14", features = ["serde", "perf"] }
serde = { version = "1.0", features = ["derive"] }
memchr = "2.5"
clap = { version = "3.2", features = ["derive"] }
# defer-lite = "1.0"
# bitflags = "1.3"
